src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Ability_Rating__c</fullName>
        <label>Ability (1-5)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accepted_Campaign__c</fullName>
        <description>Pride Campaign name</description>
        <label>Accepted Campaign</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Campaigns_Continued__c</fullName>
        <label>Accepted Campaigns Continued</label>
        <picklist>
            <picklistValues>
                <fullName>AKFISH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMBORO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMLANN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANQING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APEPER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARCECU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVEDOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BACACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANCHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCNLAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLJOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANTIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARPER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAYOSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGATOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHIAPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHUUKC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIAAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIDAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIIKAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORTES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPULMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNGTNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENCRUC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETADOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FARCOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUACOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUAMCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAINAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HINUNA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Campaigns__c</fullName>
        <label>Accepted Campaigns</label>
        <picklist>
            <picklistValues>
                <fullName>AJOSBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHFRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHUAJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAIMAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAJACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAKINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BALBAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAYTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIK2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHRTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Potorono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Raden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1- Rawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOGOR1-Seulawah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BORNEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROMNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAYTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEDESA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHIAPA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Accepted_Cohorts__c</fullName>
        <label>Accepted Cohorts</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Address_Comments__c</fullName>
        <label>Address Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Fund_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this prospect opted out of receiving Annual Fund materials from Rare?</inlineHelpText>
        <label>Annual Fund Opt Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applying_for_Cohort__c</fullName>
        <description>Cohort person is applying to</description>
        <label>Applying for Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applying_for_Cohorts__c</fullName>
        <label>Applying for Cohorts</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogor 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad - Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guad 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applying_to_Program_at__c</fullName>
        <label>Applying to Program at:</label>
        <picklist>
            <picklistValues>
                <fullName>Bogor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadalajara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_EE_O_part_of_current_strategy__c</fullName>
        <label>Are EE/O part of current strategy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aspirational_Goal__c</fullName>
        <inlineHelpText>Aspirational gift amount being sought by Rare</inlineHelpText>
        <label>Aspirational Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BES_VRM__Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BES_VRM__Initial_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BES_VRM__StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C_Strategy_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C Strategy Test</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Bio_L__c</fullName>
        <label>Campaign Manager Bio</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_Bio__c</fullName>
        <label>Campaign Manager Bio (S)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Manager_experience_education__c</fullName>
        <label>Campaign Manager experience &amp; education</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Can_org_fulfill_the_requirement__c</fullName>
        <label>Can org fulfill the requirement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_1_Birthday__c</fullName>
        <label>Child 1 Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_1_Interests__c</fullName>
        <label>Child 1 Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_1_Name__c</fullName>
        <label>Child 1 Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_2_Birthday__c</fullName>
        <label>Child 2 Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_2_Interests__c</fullName>
        <label>Child 2 Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_2_Name__c</fullName>
        <label>Child 2 Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_3_Birthday__c</fullName>
        <label>Child 3 Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Child_3_Interests__c</fullName>
        <label>Child 3 Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_3_Name__c</fullName>
        <label>Child 3 Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Organization_Type__c</fullName>
        <label>Company/Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BINGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local NGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network/Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-lateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Biography__c</fullName>
        <label>Contact Biography</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Comments__c</fullName>
        <label>Contact Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Rating__c</fullName>
        <label>Contact Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual - Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual - Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO/Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <picklist>
            <controllingField>Regions__c</controllingField>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Djibouti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eritrea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madagascar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malawi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mauritius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rwanda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seychelles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somalia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uganda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Republic of Tanzania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zambia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zimbabwe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic Republic of the Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equatorial Guinea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morocco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namibia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swaziland</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cumulative_Gift__c</fullName>
        <inlineHelpText>Sum of the prospect’s prior giving to Rare</inlineHelpText>
        <label>Cumulative Gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Funding_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Funding Record associated with this contact</description>
        <label>Current Funding Record</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contacts (Test - Funding Record)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year_Strategy_Contact__c</fullName>
        <formula>Current_Funding_Record__r.Current_Year_Strategy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>General strategy for engaging the prospect this year</inlineHelpText>
        <label>Current Year Strategy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year_Strategy__c</fullName>
        <inlineHelpText>General strategy for engaging the prospect this year</inlineHelpText>
        <label>Current Year Strategy</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Yr_Solicitation_Multi_Yr__c</fullName>
        <formula>Current_Funding_Record__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Yr Solicitation/ Multi Yr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Seeking_Admission__c</fullName>
        <label>Date Seeking Admission</label>
        <picklist>
            <controllingField>Applying_to_Program_at__c</controllingField>
            <picklistValues>
                <fullName>Fall 2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter 09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter 11</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>check if person is deceased</inlineHelpText>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Describe_your_long_term_strategy__c</fullName>
        <label>Describe your long-term strategy</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disqualification_Comments__c</fullName>
        <inlineHelpText>If Disqualified checkbox is checked, reason must be stated here</inlineHelpText>
        <label>Disqualification Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The prospect was diligently developed by a Moves Manager and it has been determined that the prospect can not make a gift of $10,000 or more or is otherwise not a viable prospect for Rare</inlineHelpText>
        <label>Disqualified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Solicit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has either this prospect and/or Rare staff requested no solicitations until further notice?</inlineHelpText>
        <label>Do Not Solicit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_org_have_long_term_strategy__c</fullName>
        <label>Does org have long-term strategy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>